VDT-2327: Get config
