# qa-engineer/backend/src/app.js
@@ -2,6 +2,7 @@ const express = require("express");
 const cors = require("cors");
 const bodyParser = require("body-parser");
 const healthCheckRoutes = require("./routers/healthcheck.router");
+const configRoutes = require("./routers/config.router");
 const tasksRoutes = require("./routers/tasks.router");
 const {validateRequestStructure, errorHandler} = require("./middleware");
 const mongoose = require("mongoose");
@@ -16,6 +17,7 @@ app.use(express.json());
 
 app.use(validateRequestStructure);
 app.use("/healthcheck", healthCheckRoutes);
+app.use("/config", configRoutes);
 
 if (process.env.BASIC_AUTH_USERNAME) {
     console.log("Basic Auth", process.env.BASIC_AUTH_USERNAME)
